src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Course_Enrolled_In__c</fullName>
        <description>Courses Enrolled in assigned to the Contact record</description>
        <inlineHelpText>Courses Enrolled in assigned to the Contact record</inlineHelpText>
        <label>Courses Enrolled In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0607-SC-BNE-SCMED</fullName>
                </value>
                <value>
                    <fullName>0608-SC-MEL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0608-SC-SYD-SCMED</fullName>
                </value>
                <value>
                    <fullName>0609-SC-AUK-SCMED</fullName>
                </value>
                <value>
                    <fullName>0610-SC-ADL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0611-SC-OOL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0611-SC-PER-SCMED</fullName>
                </value>
                <value>
                    <fullName>0705-SC-BNE-ADERM</fullName>
                </value>
                <value>
                    <fullName>0705-SC-BNE-SCMED</fullName>
                </value>
                <value>
                    <fullName>0705-SC-MEL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0706-SC-MEL-ADERM</fullName>
                </value>
                <value>
                    <fullName>0706-SC-MEL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0707-SC-SYD-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0708-SC-OOL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0709-SC-OOL-ADERM</fullName>
                </value>
                <value>
                    <fullName>0709-SC-OOL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0709-SC-SYD-ADERM</fullName>
                </value>
                <value>
                    <fullName>0709-SC-SYD-SCMED</fullName>
                </value>
                <value>
                    <fullName>0710-SC-OOL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0802-SC-MEL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0802-SC-SYD-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0805-SC-MEL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0806-SC-OOL-ADERM</fullName>
                </value>
                <value>
                    <fullName>0806-SC-OOL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0806-SC-OOL-SKINBUS</fullName>
                </value>
                <value>
                    <fullName>0807-SC-OOL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0809-SC-OOL-DBTB</fullName>
                </value>
                <value>
                    <fullName>0809-SC-SYD-ADERM</fullName>
                </value>
                <value>
                    <fullName>0809-SC-SYD-SCMED</fullName>
                </value>
                <value>
                    <fullName>0810-IM-BNE-IM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCREG_Country_del_del__c</fullName>
        <label>HCREG Country (contact)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_Barcode__c</fullName>
        <label>Mailing Address Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_Bsp__c</fullName>
        <label>Mailing Address Bsp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_DPID__c</fullName>
        <label>Mailing Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_GNAFConfidence__c</fullName>
        <label>Mailing Address GNAFConfidence</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_GNAFGroupPID__c</fullName>
        <label>Mailing Address GNAFGroupPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_GNAFPID__c</fullName>
        <label>Mailing Address GNAFPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_GNAFPointPID__c</fullName>
        <label>Mailing Address GNAFPointPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_GNAFReliability__c</fullName>
        <label>Mailing Address GNAFReliability</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_GeocodeLevel__c</fullName>
        <label>Mailing Address GeocodeLevel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_LatLong__c</fullName>
        <label>Mailing Address LatLong</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_MeshBlock__c</fullName>
        <label>Mailing Address MeshBlock</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_ParcelID__c</fullName>
        <label>Mailing Address ParcelID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_SOT__c</fullName>
        <label>Mailing Address SOT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUPAF</fullName>
                </value>
                <value>
                    <fullName>GNAF</fullName>
                </value>
                <value>
                    <fullName>AUSOTS</fullName>
                </value>
                <value>
                    <fullName>NZPAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Mailing_Address_XYCoordinate__c</fullName>
        <label>Mailing Address MapGrid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_Barcode__c</fullName>
        <label>Other Address Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_Bsp__c</fullName>
        <label>Other Address Bsp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_DPID__c</fullName>
        <label>Other Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_GNAFConfidence__c</fullName>
        <label>Other Address GNAFConfidence</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_GNAFGroupPID__c</fullName>
        <label>Other Address GNAFGroupPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_GNAFPID__c</fullName>
        <label>Other Address GNAFPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_GNAFPointPID__c</fullName>
        <label>Other Address GNAFPointPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_GNAFReliability__c</fullName>
        <label>Other Address GNAFReliability</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_GeocodeLevel__c</fullName>
        <label>Other Address GeocodeLevel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_LatLong__c</fullName>
        <label>Other Address LatLong</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_MeshBlock__c</fullName>
        <label>Other Address MeshBlock</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_ParcelID__c</fullName>
        <label>Other Address ParcelID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_SOT__c</fullName>
        <label>Other Address SOT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUPAF</fullName>
                </value>
                <value>
                    <fullName>GNAF</fullName>
                </value>
                <value>
                    <fullName>AUSOTS</fullName>
                </value>
                <value>
                    <fullName>NZPAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Other_Address_XYCoordinate__c</fullName>
        <label>Other Address MapGrid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>